--- a/Trabalho-integrado-com-biologia/css/login-cadastro.css
+++ b/Trabalho-integrado-com-biologia/css/login-cadastro.css
@@ -226,3 +226,11 @@ main.sign-up-mode .carousel {
   transition: 0.8s ease-in-out;
 }
 
+input:-webkit-autofill {
+  transition: background-color 5000s ease-in-out 0s;
+}
+
+input:focus, textarea:focus {
+  box-shadow: 0 0 0 0;
+  outline: 0;
+}
