--- a/Trabalho-integrado-com-biologia/css/login-cadastro.css
+++ b/Trabalho-integrado-com-biologia/css/login-cadastro.css
@@ -14,10 +14,9 @@ input {
 }
 
 body{
-    background: url("../img/png/login.jpg");
+    background: url("../img/jpg/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    /* filter: grayscale(10%); */
 }
 
 main {
@@ -213,7 +212,7 @@ main.sign-up-mode .carousel {
 
 .carousel {
   position: absolute;
-  height: 100%;
+  height: 90%;
   width: 55%;
   left: 45%;
   top: 0;
