--- a/Trabalho-integrado-com-biologia/css/navbar.css
+++ b/Trabalho-integrado-com-biologia/css/navbar.css
@@ -18,11 +18,12 @@ ul {
     padding: 0;
     overflow: hidden;
     background: none;
-    border: 2px solid #76A60F;
     border-radius: 50px;
     position: fixed;
     bottom: 3em;
     width: 85%;
+    background-color: white;
+
 }
 
 /* li {
@@ -31,16 +32,17 @@ ul {
 
 li a {
     display: block;
-    color: #76A60F;
+    color: black;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
+    transition: 0.3s;
 }
 
 li a:hover:not(.active) {
-    color: #FFFFFF;
+    color: #76A60F;
 }
 
 .active {
-    background-color: #FFFFFF;
+    background-color: #76A60F;
 }
