--- a/Trabalho-integrado-com-biologia/css/perfil.css
+++ b/Trabalho-integrado-com-biologia/css/perfil.css
@@ -28,55 +28,99 @@ h2{
     text-transform: uppercase;
     color: white;
     font-weight: lighter;
+    margin-bottom: 5%;
+    font-size: 250%;
 }
 
 .info{
+    position: absolute;
+    width: 50%;
+    height: 70%;
+    left: 7.5%;
+    top: 10%;
+    padding: 3%;
     border: 2px solid #76A60F;
-    width: 100%;
-    height: 100%;
     border-radius: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    text-transform: uppercase;
+
+  
 }
 .botoes{
+    margin-top: 4.5%;
+    top: 10%;
     width: 100%;
     height: 100%;
     border-radius: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-left: 51%;
 }
 
-.input-wrap{
-    display: flex;
-}
+
+
 
 label{
     color: #76A60F;
-    font-size: 15px;
+   
 }
 
 input{
     background-color: transparent;
     color: white;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 80%;
+    float: right;
+    text-align: right;
+    
 }
 
 button{
     background-color: transparent;
     color: #76A60F;
     cursor: pointer;
+    text-transform: uppercase;
     font-size: 20px;
+    
 }
 .button{
+    color: #76A60F;
+
+    font-family: 'karla';
     border: 2px solid #76A60F;
     border-radius: 50px;
-    width: 453px;
+    width: 60%;
     height: 57px;
-    display: flex;
+    
     justify-content: center;
     align-items: center;
     margin: 10px;
+} 
+
+a.button{
+    color: #76A60F;
+    
+    font-family: 'karla';
+    border: 2px solid #76A60F;
+    border-radius: 50px;
+    width: 60%;
+    height: 57px;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+} 
+   
+div.input-wrap{
+    margin: 7%;
+    font-size: 120%;
+}
+
+
+input:-webkit-autofill {
+    transition: background-color 5000s ease-in-out 0s;
+  }
+  
+input:focus, textarea:focus {
+    box-shadow: 0 0 0 0;
+    outline: 0;
 }
